--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,29 +1,49 @@
 .gradient-custom {
     /* fallback for old browsers */
     background: #f093fb;
-    
+
     /* Chrome 10-25, Safari 5.1-6 */
-    
-    background: -webkit-linear-gradient(to bottom right, rgba(240, 147, 251, 1), rgba(245, 87, 108, 1));
-    
+
+    background: -webkit-linear-gradient(
+        to bottom right,
+        rgba(240, 147, 251, 1),
+        rgba(245, 87, 108, 1)
+    );
+
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    background: linear-gradient(to bottom right, rgba(240, 147, 251, 1), rgba(245, 87, 108, 1))
-    }
-    
-    .card-registration .select-input.form-control[readonly]:not([disabled]) {
-    font-size: 1rem;
-    line-height: 2.15;
-    padding-left: .75em;
-    padding-right: .75em;
-    }
-    .card-registration .select-arrow {
-    top: 13px;
-    }
-.set tr td{
-    width: 1%;
+    background: linear-gradient(
+        to bottom right,
+        rgba(240, 147, 251, 1),
+        rgba(245, 87, 108, 1)
+    );
 }
 
-body{
+.card-registration .select-input.form-control[readonly]:not([disabled]) {
+    font-size: 1rem;
+    line-height: 2.15;
+    padding-left: 0.75em;
+    padding-right: 0.75em;
+}
+.card-registration .select-arrow {
+    top: 13px;
+}
+.set tr td {
+  width: 1%;
+}
+
+main {
+    margin-bottom: -25px;
+}
+
+.table-responsive{
+    margin-bottom: -40px;
+}
+
+footer div {
+    margin-left: 90%;
+}
+
+body {
     color: black;
 }
 .section {
@@ -43,80 +63,83 @@ img {
 /* About Me 
 ---------------------*/
 h1 {
-  font-size: 50px;
-  font-weight: 700;
-  margin: 0 0 6px;
+    font-size: 50px;
+    font-weight: 700;
+    margin: 0 0 6px;
 }
 @media (max-width: 767px) {
-  h1 {
-    font-size: 35px;
-  }
+    h1 {
+        font-size: 35px;
+    }
 }
 .about-text h6 {
-  font-weight: 600;
-  margin-bottom: 15px;
+    font-weight: 600;
+    margin-bottom: 15px;
 }
 @media (max-width: 767px) {
-  .about-text h6 {
-    font-size: 18px;
-  }
+    .about-text h6 {
+        font-size: 18px;
+    }
 }
 .about-text p {
-  font-size: 18px;
-  max-width: 450px;
+    font-size: 18px;
+    max-width: 450px;
 }
 .about-text p mark {
-  font-weight: 600;
-  color: #161718;
+    font-weight: 600;
+    color: #161718;
 }
 
 .about-list {
-  padding-top: 10px;
+    padding-top: 10px;
 }
 .about-list .media {
-  padding: 5px 0;
+    padding: 5px 0;
 }
 .about-list label {
-  color: #000000;
-  font-weight: 800;
-  font-size: 25px;
-  width: 88px;
-  margin: 0;
-  position: relative;
+    color: #000000;
+    font-weight: 800;
+    font-size: 25px;
+    width: 88px;
+    margin: 0;
+    position: relative;
 }
 
 .about-list p {
-  margin: 0;
-  font-size: 15px;
+    margin: 0;
+    font-size: 15px;
 }
 
 @media (max-width: 991px) {
-  .about-avatar {
-    margin-top: 30px;
-  }
+    .about-avatar {
+        margin-top: 30px;
+    }
 }
 
 .about-section .counter {
-  padding: 22px 20px;
-  background: #ffffff;
-  border-radius: 10px;
-  box-shadow: 0 0 30px rgba(31, 45, 61, 0.125);
+    padding: 22px 20px;
+    background: #ffffff;
+    border-radius: 10px;
+    box-shadow: 0 0 30px rgba(31, 45, 61, 0.125);
 }
 .about-section .counter .count-data {
-  margin-top: 10px;
-  margin-bottom: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 .about-section .counter .count {
-  font-weight: 700;
-  color: #20247b;
-  margin: 0 0 5px;
+    font-weight: 700;
+    color: #20247b;
+    margin: 0 0 5px;
 }
 .about-section .counter p {
-  font-weight: 600;
-  margin: 0;
+    font-weight: 600;
+    margin: 0;
 }
 mark {
-    background-image: linear-gradient(rgba(252, 83, 86, 0.6), rgba(252, 83, 86, 0.6));
+    background-image: linear-gradient(
+        rgba(252, 83, 86, 0.6),
+        rgba(252, 83, 86, 0.6)
+    );
     background-size: 100% 3px;
     background-repeat: no-repeat;
     background-position: 0 bottom;
@@ -130,4 +153,3 @@ mark {
 .dark-color {
     color: #20247b;
 }
-
